--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar color="primary">
-  <mat-icon (click)="desplegable.toggle()">menu</mat-icon>
+  <button mat-icon-button (click)="desplegable.toggle()">
+    <mat-icon >menu</mat-icon>
+  </button>
   <span id="titulo">Taller Angular Material OpenWebinars</span>
 </mat-toolbar>
 <mat-sidenav-container id="contenedor">
