--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,10 @@
       <mat-icon>table_chart</mat-icon>
       Tablas
     </p>
+    <p routerLink="/tarjeta" style="padding: 10px;">
+      <mat-icon>card_membership</mat-icon>
+      Tarjetas
+    </p>
   </mat-sidenav>
   <mat-sidenav-content>
     <router-outlet></router-outlet>
